# libfreelica

./: CMakeLists.txt  LICENSE  README.md  libfreelica.pc.in
examples/: CMakeLists.txt  libfreelica_test.cpp  octopus_balance.cpp
include/libfreelica/: commands.h  constants.h  freelica_tag.h  libfreelica.h  utils.h
include/libfreelica/commands/: authentication_1_command.h  authentication_1_response_command.h  authentication_2_command.h  authentication_2_response_command.h  command.h  polling_command.h  polling_response_command.h  read_without_encryption_command.h  read_without_encryption_response_command.h  request_response_command.h  request_response_response_command.h  request_service_command.h  request_service_response_command.h  request_specification_version_command.h  request_specification_version_response_command.h  request_system_code_command.h  request_system_code_response_command.h  search_service_code_command.h  search_service_code_response_command.h
src/: freelica_tag.cpp  utils.cpp
src/commands/: authentication_1_command.cpp  authentication_1_response_command.cpp  authentication_2_command.cpp  authentication_2_response_command.cpp  command.cpp  command_create.cpp  polling_command.cpp  polling_response_command.cpp  read_without_encryption_command.cpp  read_without_encryption_response_command.cpp  request_response_command.cpp  request_response_response_command.cpp  request_service_command.cpp  request_service_response_command.cpp  request_specification_version_command.cpp  request_specification_version_response_command.cpp  request_system_code_command.cpp  request_system_code_response_command.cpp  search_service_code_command.cpp  search_service_code_response_command.cpp
